force-app/main/default/objects/ClusterJobResult__c/ClusterJobResult__c.object-meta.xml
<CustomObject>
    <label>Cluster Job Result</label>
    <nameField>
        <displayFormat>CJR-{0000}</displayFormat>
        <label>ClusterJobResult Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Job Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>