force-app/main/default/objects/ClusterJobResult__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>ClusterJobCluster__c</referenceTo>
    <relationshipLabel>Cluster Job Results</relationshipLabel>
    <relationshipName>ClusterJobResults</relationshipName>
    <type>Lookup</type>
</CustomField>