force-app/main/default/objects/ClusterJobResult__c/fields/ClusterJob__c.field-meta.xml
<CustomField>
    <fullName>ClusterJob__c</fullName>
    <label>Cluster Job</label>
    <referenceTo>ClusterJob__c</referenceTo>
    <relationshipLabel>Cluster Job Results</relationshipLabel>
    <relationshipName>ClusterJobResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>