force-app/main/default/objects/ClusterJobResult__c/fields/ClusterName__c.field-meta.xml
<CustomField>
    <fullName>ClusterName__c</fullName>
    <formula>HYPERLINK( Cluster__r.Id, Cluster__r.ClusterName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Name</label>
    <type>Text</type>
</CustomField>