force-app/main/default/objects/ClusterJobResult__c/fields/ClusterNumber__c.field-meta.xml
<CustomField>
    <fullName>ClusterNumber__c</fullName>
    <label>Cluster Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>