force-app/main/default/objects/ClusterJobResult__c/fields/DistanceToCluster__c.field-meta.xml
<CustomField>
    <fullName>DistanceToCluster__c</fullName>
    <label>Distance To Cluster</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>