force-app/main/default/objects/ClusterJobResult__c/fields/DistanceToNNCluster__c.field-meta.xml
<CustomField>
    <fullName>DistanceToNNCluster__c</fullName>
    <label>Distance To Neighbor Cluster</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>