force-app/main/default/objects/ClusterJobResult__c/fields/Json2__c.field-meta.xml
<CustomField>
    <fullName>Json2__c</fullName>
    <label>Json2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>