force-app/main/default/objects/ClusterJobResult__c/fields/Json3__c.field-meta.xml
<CustomField>
    <fullName>Json3__c</fullName>
    <label>Json3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>