force-app/main/default/objects/ClusterJobResult__c/fields/Json4__c.field-meta.xml
<CustomField>
    <fullName>Json4__c</fullName>
    <label>Json4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>