force-app/main/default/objects/ClusterJobResult__c/fields/Random__c.field-meta.xml
<CustomField>
    <fullName>Random__c</fullName>
    <label>Random</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>