force-app/main/default/objects/ClusterJobResult__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>