force-app/main/default/objects/ClusterJobResult__c/fields/RelatedRecordLink__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordLink__c</fullName>
    <formula>HYPERLINK( RecordId__c, RecordName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Link</label>
    <type>Text</type>
</CustomField>